@@ -149,11 +149,14 @@
       name="jasper-compiler"
       rev="${jasper.version}"
       conf="jetty->master"/>
-<!-- this is resolved locally from the lib folder 
-   <dependency org="tomcat"
-      name="jsp-api"
-      rev="${jsp-api.version}"
-      conf="jetty->master"/> -->
+    <dependency org="org.mortbay.jetty"
+      name="jsp-api-2.1"
+      rev="${jetty.version}"
+      conf="jetty->master"/>
+    <dependency org="org.mortbay.jetty"
+      name="jsp-2.1"
+      rev="${jetty.version}"
+      conf="jetty->master"/>
     <dependency org="commons-el"
       name="commons-el"
       rev="${commons-el.version}"
